objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Conga_Conductor_Texas_LLC_Past_Due__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;reportid=[SalesEntity]00OU0000001rPVP,[Transaction]00OU0000001rjx7&quot; + 
&quot;&amp;queryid=[Transaction1]a100B00000CI1Y0,[SalesEntity1]a10U0000003H6zr,[Entity]a100B00000DJQ5B&quot; +
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;ofn=Texas Franchise Tax Renewal+&quot; + QB_Invoice__c + 
&quot;&amp;TemplateID=a0z0B00000FXjBN&quot; + 
&quot;&amp;emailadditionalto=&quot; + Account.E_Mail__c + &apos;,&apos; + Account.Other_E_Mail__c +
&quot;&amp;EmailBCC=swallace@andersonadvisors.com&quot; +
&quot;&amp;cetid= a0y0B00000DCKvi&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Conductor Texas LLC Past Due</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Conductor_Texas_State_Renewal_Corp__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;reportid=[SalesEntity]00OU0000001rPVP,[Transaction]00OU0000001rjx7&quot; + 
&quot;&amp;queryid=[Transaction1]a100B00000CI1Y0,[SalesEntity1]a10U0000003H6zr,[Entity]a100B00000DJQ5B&quot; +
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;ofn=Texas Franchise Tax Renewal+&quot; + QB_Invoice__c + 
&quot;&amp;TemplateID=a0z0B00000FWylQ&quot; + 
&quot;&amp;emailadditionalto=&quot; + Account.E_Mail__c + &apos;,&apos; + Account.Other_E_Mail__c +
&quot;&amp;cetid= a0y0B00000BgSYs&quot; +
&quot;&amp;EmailBCC=swallace@andersonadvisors.com&quot; +
&quot;&amp;qmode=SendEmail&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Conductor Texas State Renewal Corp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Conductor_Texas_State_Renewal_LLC__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;reportid=[SalesEntity]00OU0000001rPVP,[Transaction]00OU0000001rjx7&quot; + 
&quot;&amp;queryid=[Transaction1]a100B00000CI1Y0,[SalesEntity1]a10U0000003H6zr,[Entity]a100B00000DJQ5B&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;ofn=Texas Franchise Tax Renewal+&quot; + QB_Invoice__c + 
&quot;&amp;TemplateID=a0z0B00000FWymO&quot; + 
&quot;&amp;emailadditionalto=&quot; + Account.E_Mail__c + &apos;,&apos; + Account.Other_E_Mail__c +
&quot;&amp;EmailBCC=swallace@andersonadvisors.com&quot; +
&quot;&amp;cetid=a0y0B00000BgSYs&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Conductor Texas State Renewal LLC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Filing_Fee_Receipt_Conductor__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[Transaction]a100B00000CI1Y0,[SalesEntity1]a10U0000003H6zr, [PensionRenewal]a100B00000GyCMY,[Entity]a100B00000DJQ5B&quot; +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;ofn=Filing+Fee+Receipt+&quot; + Account.Name +
&quot;&amp;TemplateID=a0zU0000005Pb9Z&quot; +
&quot;&amp;emailadditionalto=&quot; + Account.E_Mail__c + &apos;,&apos; + Account.Other_E_Mail__c +
&quot;&amp;EmailBCC=swallace@andersonadvisors.com&quot; +
&quot;&amp;cetid=a0yU0000003QWka&quot; +
&quot;&amp;qmode=SendEmail&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Filing Fee Receipt Conductor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Help_Desk_Link__c</fullName>
        <formula>HYPERLINK (&quot;/apex/APXTConga4__Conga_Composer?ServerURL=&quot; + $Api.Partner_Server_URL_370 + Conga_Receipt_Conductor__c, &quot;Test Batch Hyperlink&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Help Desk Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_New_Sale_Credit_Conductor__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[SalesEntity]00OU0000001rPVP,[Transaction]00OU0000001rjx7&quot; +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;ofn=Receipt+&quot; + Account.Name +
&quot;&amp;TemplateID=a0zU0000002FRJL&quot; +
&quot;&amp;emailtoID=003U000000zhgFS&quot; +
&quot;&amp;cetid=a0yU0000001garj&quot; +
&quot;&amp;qmode=3&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga New Sale Credit Conductor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_New_Sale_Tax_Conductor__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[SalesEntity]00OU0000001rPVP,[Transaction]00OU0000001rjx7&quot; +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;ofn=Receipt+&quot; + Account.Name +
&quot;&amp;TemplateID=a0zU0000002FRJL&quot; +
&quot;&amp;emailtoID=003U000000ziMQA&quot; +
&quot;&amp;emailadditionalto=skalt@dganderson.com&quot; +
&quot;&amp;cetid=a0yU0000001gbp3&quot; +
&quot;&amp;qmode=3&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga New Sale Tax Conductor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Nominee_Service__c</fullName>
        <formula>TEXT(Entity__r.Nominee_Services__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Nominee Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Receipt_Conductor__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[Transaction]a100B00000CI1Y0,[SalesEntity1]a10U0000003H6zr, [PensionRenewal]a100B00000GyCMY,[Entity]a100B00000DJQ5B&quot; +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;ofn=Receipt+&quot; + Account.Name +
&quot;&amp;TemplateID=a0zU0000002FRJL&quot; +
&quot;&amp;emailadditionalto=&quot; + Account.E_Mail__c + &apos;,&apos; + Account.Other_E_Mail__c +
&quot;&amp;EmailBCC=swallace@andersonadvisors.com&quot; +
&quot;&amp;cetid=a0yU0000001I3wn&quot; +
&quot;&amp;qmode=SendEmail&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Receipt Conductor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Renewal_NPS_Conductor__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[SalesEntity]00OU0000001rPVP,[Transaction]00OU0000001rjx7&quot; +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;ofn=Renewal+&quot; + Account.Name +
&quot;&amp;emailadditionalto=&quot; + Account.E_Mail__c + &apos;,&apos; + Account.Other_E_Mail__c +
&quot;&amp;EmailBCC=swallace@andersonadvisors.com&quot; +
&quot;&amp;cetid=a0yU00000069QMg&quot; +
&quot;&amp;lg4=1&quot; +
&quot;&amp;qmode=SendEmail&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Renewal NPS Conductor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Standard_Renewal_Conductor__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;reportid=[SalesEntity]00OU0000001rPVP&quot; + 
&quot;&amp;queryid=[Transaction]a100B00000CI1Y0,[SalesEntity1]a10U0000003H6zr, [PensionRenewal]a100B00000GyCMY,[Entity]a100B00000DJQ5B&quot; +
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;ofn=Renewal+&quot; + Account.Name + 
&quot;&amp;TemplateID=a0zU0000002FEiS&quot; + 
&quot;&amp;emailadditionalto=&quot; + Account.E_Mail__c + &apos;,&apos; + Account.Other_E_Mail__c +
&quot;&amp;EmailBCC=swallace@andersonadvisors.com&quot; +
&quot;&amp;cetid=a0yU0000001gbsr&quot; + 
&quot;&amp;lg4=1&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Standard Renewal Conductor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_State_Renewal_NV_Conductor__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;reportid=[SalesEntity]00OU0000001rPVP&quot; +
&quot;&amp;queryid=[Transaction]a100B00000CI1Y0,[SalesEntity1]a10U0000003H6zr, [PensionRenewal]a100B00000GyCMY,[Entity]a100B00000DJQ5B&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;ofn=Renewal+&quot; + QB_Invoice__c + 
&quot;&amp;TemplateID=a0zU0000002FRGg&quot; + 
&quot;&amp;emailadditionalto=&quot; + Account.E_Mail__c + &apos;,&apos; + Account.Other_E_Mail__c +
&quot;&amp;EmailBCC=swallace@andersonadvisors.com&quot; +
&quot;&amp;cetid=a0yU0000001gg5H&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga State Renewal NV Conductor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_State_Renewal_Outside_Conductor__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[SalesEntity]00OU0000001rPVP&quot; +
&quot;&amp;queryid=[Transaction]a100B00000CI1Y0,[SalesEntity1]a10U0000003H6zr, [PensionRenewal]a100B00000GyCMY,[Entity]a100B00000DJQ5B&quot; +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;ofn=Renewal+&quot; + QB_Invoice__c +
&quot;&amp;TemplateID=a0zU0000003ThS7&quot; +
&quot;&amp;emailadditionalto=&quot; + Account.E_Mail__c + &apos;,&apos; + Account.Other_E_Mail__c +
&quot;&amp;EmailBCC=swallace@andersonadvisors.com&quot; + 
&quot;&amp;cetid= a0yU0000001gg5H&quot; +
&quot;&amp;qmode=SendEmail&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga State Renewal Outside Conductor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_State_Renewal_WY_Conductor__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;reportid=[SalesEntity]00OU0000001rPVP&quot; + 
&quot;&amp;queryid=[Transaction]a100B00000CI1Y0,[SalesEntity1]a10U0000003H6zr, [PensionRenewal]a100B00000GyCMY,[Entity]a100B00000DJQ5B&quot; +
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;ofn=Renewal+&quot; + QB_Invoice__c + 
&quot;&amp;TemplateID=a0zU0000008vV7f&quot; + 
&quot;&amp;emailadditionalto=&quot; + Account.E_Mail__c + &apos;,&apos; + Account.Other_E_Mail__c +
&quot;&amp;EmailBCC=swallace@andersonadvisors.com&quot; +
&quot;&amp;cetid= a0yU0000001gg5H&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga State Renewal WY Conductor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_State_Renewal_Washington_Conductor__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[SalesEntity]00OU0000001rPVP&quot; +
&quot;&amp;queryid=[Transaction]a100B00000CI1Y0,[SalesEntity1]a10U0000003H6zr, [PensionRenewal]a100B00000GyCMY,[Entity]a100B00000DJQ5B&quot; +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;ofn=Renewal+&quot; + QB_Invoice__c +
&quot;&amp;TemplateID=a0zU0000003TWop&quot; +
&quot;&amp;emailadditionalto=&quot; + Account.E_Mail__c + &apos;,&apos; + Account.Other_E_Mail__c +
&quot;&amp;EmailBCC=swallace@andersonadvisors.com&quot; +
&quot;&amp;cetid= a0yU0000002Nua3&quot; +
&quot;&amp;qmode=SendEmail&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga State Renewal Washington Conductor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Template_Selection__c</fullName>
        <formula>IF(RecordTypeId = &quot;012U0000000DhZQ&quot;,
Case(Text(Renewal_State__c), 
&quot;Wyoming&quot;, &quot;a0zU0000008vV7f&quot;,
&quot;Nevada&quot;, &quot;a0zU0000002FRGg&quot;,
&quot;Washington&quot;, &quot;a0zU0000003TWop&quot;,
&quot;a0zU0000003ThS7&quot;),
NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Template Selection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Texas_Entity_Type__c</fullName>
        <formula>Entity__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Texas Entity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consult_Date__c</fullName>
        <inlineHelpText>The date the Strategy Session is scheduled for.</inlineHelpText>
        <label>Consult Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.FirstName + &quot; &quot; +  Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_Compliance_Test__c</fullName>
        <label>Corporate Compliance Test</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Coupon_Used__c</fullName>
        <description>Used to Track any promotional codes used</description>
        <label>Coupon Used</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Admin Portal Users to Trigger the flow</description>
        <label>Create Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By_Title__c</fullName>
        <description>Title of employee who created the sale. Used for bonuses by HR.</description>
        <formula>CreatedBy.Title</formula>
        <label>Created By (Title)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_From_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created From Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreditCardExpiry__c</fullName>
        <formula>DATE( VALUE(ChargentSFA__Card_Year_Indicator__c) , Value(ChargentSFA__Card_Month_Indicator__c),01)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Card Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_2nd_Sales_Rep__c</fullName>
        <formula>IF( TEXT( X2nd_Sales_Rep__c ) = $User.FirstName + &quot; &quot; + $User.LastName, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current 2nd Sales Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Platinum_Membership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Platinum Membership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Sales_Rep__c</fullName>
        <description>To limit reports to  only allow users to see sales where they are the sales rep regardless of who owns the sale</description>
        <formula>IF(  OR(Sales_Rep__r.User__c  = $User.Id,
Sales_Rep__r.Community_User__c = $User.Id,
 OwnerId = $User.Id), TRUE, FALSE)</formula>
        <label>Current Sales Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Structure__c</fullName>
        <label>Current Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Nothing Set-Up</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>Sole Prop</fullName>
                </value>
                <value>
                    <fullName>S Corp</fullName>
                </value>
                <value>
                    <fullName>C Corp</fullName>
                </value>
                <value>
                    <fullName>General Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership</fullName>
                </value>
                <value>
                    <fullName>Non Profit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Multiple Entities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DO_NOT_CALL_TILL_AFTER__c</fullName>
        <label>DO NOT CALL TILL AFTER</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Groove_Notes__c</fullName>
        <inlineHelpText>Contains notes that are surfaced in Groove&apos;s sidebar by default.</inlineHelpText>
        <label>Groove Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Invited_Event__c</fullName>
        <label>Date Invited Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Put_On_Hold__c</fullName>
        <label>Date Put On Hold</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Registered__c</fullName>
        <label>Date Registered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Shipped__c</fullName>
        <label>Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Final_Follow_Up__c</fullName>
        <label>Date of Final Follow-Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Follow_Up_1__c</fullName>
        <label>Date of Follow-Up 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Follow_Up_2__c</fullName>
        <label>Date of Follow-Up 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Follow_Up_3__c</fullName>
        <label>Date of Follow-Up 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Next_Follow_Up__c</fullName>
        <label>Date of Next Follow-Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_First_Closed_Sale__c</fullName>
        <formula>TODAY() - DATEVALUE(Account.First_Closed_Sale_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since First Closed Sale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_First_Transaction__c</fullName>
        <formula>IF(Last_Transaction__c-First_Transaction__c = 0, NULL, (Last_Transaction__c-First_Transaction__c))</formula>
        <label>Days Since First &amp; Last Transaction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Particulars__c</fullName>
        <label>Deal Particulars</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delete_the_Sale_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete the Sale Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <formula>IF(OR(
Amount&lt;=0,
Discount__c&lt;=0),
0,
(Total_List_Price_Net_of_Platinum__c-Total_Sales_Price_Net_of_Platinum__c)/Total_List_Price_Net_of_Platinum__c)</formula>
        <inlineHelpText>(Amount - Total List Price) / Amount</inlineHelpText>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discount Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>Total_List_Price_Net_of_Platinum__c-Total_Sales_Price_Net_of_Platinum__c</formula>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dissolution_Date__c</fullName>
        <label>Dissolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DoNotEmailInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this field is checked, the invoice for this sale will not be automatically emailed to the customer.</inlineHelpText>
        <label>Do Not Email Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Create_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, the normal order flow will not run.</description>
        <label>Do Not Create Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocuSign_Payment_Form__c</fullName>
        <description>Link to DocuSign payment form that uses a secure query parameter in FormAssembly</description>
        <label>DocuSign Payment Form</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Does_Not_Need_Blueprint__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Does Not Need Blueprint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Down_Payment__c</fullName>
        <label>Down Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>DATETIMEVALUE (Renewal_Effective_Date__c) - 21</formula>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EIN_Number__c</fullName>
        <formula>Entity__r.EIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EIN Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EIN_Received__c</fullName>
        <label>EIN Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <label>EIN #</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES_Assignment_Number__c</fullName>
        <formula>IF( Es_Assignment_number_override__c !=0,Es_Assignment_number_override__c ,IF(CONTAINS(Name,&quot;Livestream OO&quot;),1+MOD(value(ES_AutoNumber__c),8),
IF(CONTAINS(Name,&quot;Package OO&quot;),1+MOD(value(ES_AutoNumber__c),8),
IF(CONTAINS(Name,&quot; OO&quot;),1+MOD(value(ES_AutoNumber__c),8),
IF(CONTAINS(Name,&quot;Womens REIN Package - FF&quot;),1+MOD(value(ES_AutoNumber__c),8),0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ES Assignment Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_AutoNumber__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>ES AutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Edit_Box_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email2__c</fullName>
        <description>auto populates from contact</description>
        <inlineHelpText>autopopulates</inlineHelpText>
        <label>Email2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <description>Vertiba OnDemand, 10/20/2014, SR-00002454</description>
        <formula>Account.E_Mail__c</formula>
        <inlineHelpText>Email populated automatically from Account</inlineHelpText>
        <label>Email 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Used in Facebook Purchase Events - Integration with Zapier. Please do not delete.</description>
        <formula>Account.E_Mail__c</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Name_2__c</fullName>
        <formula>Entity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>C-Corporation</fullName>
                </value>
                <value>
                    <fullName>S-Corporation</fullName>
                </value>
                <value>
                    <fullName>LP</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
                <value>
                    <fullName>CRT</fullName>
                </value>
                <value>
                    <fullName>GRT</fullName>
                </value>
                <value>
                    <fullName>QPRT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entity_Update_Note__c</fullName>
        <label>Entity Update Note</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entrity_Name__c</fullName>
        <label>Entrity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Es_Assignment_number_override__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Es Assignment number override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escalation_Status__c</fullName>
        <description>Used for escalations, so Supervisors can track the progress of the escalation.</description>
        <inlineHelpText>Used by Supervisors to track the progress of resolving escalations.</inlineHelpText>
        <label>Escalation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimate_Number__c</fullName>
        <label>Estimate Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Consult_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Rep Assigned the Consult</description>
        <label>Event Consult Rep</label>
        <referenceTo>Sales_Rep__c</referenceTo>
        <relationshipLabel>Opportunities (Event Consult Rep)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Offer_Automation_Text__c</fullName>
        <description>Used with FormAssembly to trigger event offer automation</description>
        <inlineHelpText>Used with FormAssembly to trigger event offer automation</inlineHelpText>
        <label>Event Offer Automation Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Transaction__c</fullName>
        <label>Event Transaction</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mapped from Lead - filled out initially by CSR</inlineHelpText>
        <label>Existing Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this an existing client that does not need a Thank you call.</inlineHelpText>
        <label>Existing Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FA_Sales_Rep__c</fullName>
        <label>FA Sales Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FT_or_PT_Investor__c</fullName>
        <label>FT or PT Investor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Federal_Return_Due_Date__c</fullName>
        <formula>Entity__r.Federal_Return__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Federal Return Due Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fifth_Promise_Payment_Date__c</fullName>
        <label>Fifth Promise Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Filing_Fees_Audit__c</fullName>
        <formula>IF(OR(Total_Filing_Fees__c = Amount, Total_Filing_Fees__c+Registered_Agent__c = Amount),
 TRUE, FALSE)</formula>
        <label>Filing Fees Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Follow_Up__c</fullName>
        <label>Final Follow Up</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Follow_Up_sales</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Opportunity__c</fullName>
        <formula>IF( Account.First_Closed_Sale_Date__c == First_Transaction__c, 
True,
False
)</formula>
        <label>First Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Promise_Payment_Date__c</fullName>
        <label>First Promise Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Quote_Date__c</fullName>
        <formula>CloseDate - 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Quote Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Renewal_Opportunity__c</fullName>
        <formula>IF( Account.First_Renewal_Closed_Sale_Date__c== First_Transaction__c, 
True, 
False 
)</formula>
        <label>First Renewal Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Transaction__c</fullName>
        <description>Date of first approved transaction.</description>
        <inlineHelpText>Date of first approved transaction.</inlineHelpText>
        <label>First Transaction</label>
        <summarizedField>ChargentSFA__Transaction__c.ChargentSFA__Gateway_Date__c</summarizedField>
        <summaryFilterItems>
            <field>ChargentSFA__Transaction__c.ChargentSFA__Response_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ChargentSFA__Transaction__c.ChargentSFA__Type__c</field>
            <operation>equals</operation>
            <value>Charge</value>
        </summaryFilterItems>
        <summaryForeignKey>ChargentSFA__Transaction__c.ChargentSFA__Opportunity__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Follow_Up_1__c</fullName>
        <label>Follow Up 1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Follow_Up_sales</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Up_2__c</fullName>
        <label>Follow Up 2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Follow_Up_sales</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Up_3__c</fullName>
        <label>Follow Up 3</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Follow_Up_sales</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FormAssembly_Handler__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox serves as a way to tell Salesforce when not to run specific automation because FormAssembly is already handling it.</description>
        <label>FormAssembly Handler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fourth_Promise_Payment_Date__c</fullName>
        <label>Fourth Promise Payment Date</label>
        <type>Date</type>
    </fields>
</CustomObject>